--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,14 @@ h1 {
   touch-action: manipulation;
 }
 
+.center {
+  align-items: center;
+}
+
+.inline {
+  display: inline;
+}
+
 .button:hover {
   box-shadow: rgba(44,187,99,.35) 0 -25px 18px -14px inset,rgba(44,187,99,.25) 0 1px 2px,rgba(44,187,99,.25) 0 2px 4px,rgba(44,187,99,.25) 0 4px 8px,rgba(44,187,99,.25) 0 8px 16px,rgba(44,187,99,.25) 0 16px 32px;
   transform: scale(1.05) rotate(-1deg);
@@ -57,6 +65,10 @@ h1 {
     display:block;
 }
 
-#highscore {
+#scoreBoard {
   display: none;
+  margin: auto;
+  width: 30%;
+  padding: 10px;
+  border: 2px solid blue;
 }
